--- a/e-conomic/Base.lproj/Main.storyboard
+++ b/e-conomic/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="efH-jc-7aN">
-                                <rect key="frame" x="-20" y="76" width="433" height="730.33333333333337"/>
+                                <rect key="frame" x="-20" y="76" width="433" height="681.33333333333337"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fB7-NT-2dQ">
                                         <rect key="frame" x="20" y="20" width="393" height="100"/>
@@ -180,20 +180,35 @@
                                             <action selector="saveReceipt" destination="uWC-fw-eob" eventType="touchUpInside" id="YaI-N3-obe"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1SX-cJ-ZI7">
+                                        <rect key="frame" x="166.66666666666666" y="559" width="99.999999999999972" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="cDc-3E-2ln"/>
+                                            <constraint firstAttribute="width" constant="100" id="lk0-H8-mWi"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="History"/>
+                                        <connections>
+                                            <action selector="showHistory" destination="uWC-fw-eob" eventType="touchUpInside" id="qPH-sn-TRb"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="EeB-9v-VbO" firstAttribute="top" secondItem="LGr-Mx-aot" secondAttribute="bottom" constant="79.670000000000002" id="26L-sf-1vI"/>
                                     <constraint firstItem="wEb-GX-O7Z" firstAttribute="top" secondItem="EeB-9v-VbO" secondAttribute="bottom" constant="26.666666666666629" id="4co-PS-U4L"/>
                                     <constraint firstItem="LGr-Mx-aot" firstAttribute="top" secondItem="fB7-NT-2dQ" secondAttribute="bottom" constant="13" id="6nU-0P-Ea3"/>
                                     <constraint firstItem="fB7-NT-2dQ" firstAttribute="centerX" secondItem="EeB-9v-VbO" secondAttribute="centerX" id="8Gc-dO-nsZ"/>
+                                    <constraint firstItem="r88-Jk-Fkh" firstAttribute="bottom" secondItem="1SX-cJ-ZI7" secondAttribute="bottom" constant="87.333333333333371" id="C9s-NJ-WdF"/>
                                     <constraint firstItem="wEb-GX-O7Z" firstAttribute="centerX" secondItem="EeB-9v-VbO" secondAttribute="centerX" id="Epz-H3-DT1"/>
                                     <constraint firstItem="EeB-9v-VbO" firstAttribute="leading" secondItem="r88-Jk-Fkh" secondAttribute="leading" constant="146" id="OAJ-zL-G7T"/>
                                     <constraint firstItem="fB7-NT-2dQ" firstAttribute="top" secondItem="r88-Jk-Fkh" secondAttribute="top" constant="20" id="OLi-0Q-eSc"/>
                                     <constraint firstAttribute="trailing" secondItem="fB7-NT-2dQ" secondAttribute="trailing" constant="20" id="R9s-fr-RIe"/>
                                     <constraint firstItem="EeB-9v-VbO" firstAttribute="centerX" secondItem="efH-jc-7aN" secondAttribute="centerX" id="V2e-qo-KCn"/>
                                     <constraint firstItem="LGr-Mx-aot" firstAttribute="leading" secondItem="r88-Jk-Fkh" secondAttribute="leading" constant="30" id="VEe-ZO-ITY"/>
+                                    <constraint firstItem="1SX-cJ-ZI7" firstAttribute="top" secondItem="EeB-9v-VbO" secondAttribute="bottom" constant="59.670000000000002" id="XiP-1B-y3P"/>
                                     <constraint firstAttribute="bottom" secondItem="wEb-GX-O7Z" secondAttribute="bottom" constant="20" id="fYQ-ux-Q78"/>
                                     <constraint firstItem="fB7-NT-2dQ" firstAttribute="leading" secondItem="r88-Jk-Fkh" secondAttribute="leading" constant="20" id="kKK-zX-eZq"/>
+                                    <constraint firstItem="1SX-cJ-ZI7" firstAttribute="centerX" secondItem="wEb-GX-O7Z" secondAttribute="centerX" id="rHK-7N-IHE"/>
                                     <constraint firstItem="wEb-GX-O7Z" firstAttribute="leading" secondItem="r88-Jk-Fkh" secondAttribute="leading" constant="166.33333333333337" id="zwg-kg-c8Z"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="0i2-nK-n8a"/>
@@ -209,6 +224,8 @@
                             <constraint firstItem="efH-jc-7aN" firstAttribute="centerX" secondItem="sWa-75-VQa" secondAttribute="centerX" id="JPN-nR-jNf"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="amountTextField" destination="9ly-PQ-3QT" id="jAR-Je-vBT"/>
                         <outlet property="currencyTextField" destination="nGn-VP-aTE" id="uom-rg-ClY"/>
@@ -220,6 +237,43 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oap-Sd-d2F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3049.6183206106871" y="-58.450704225352112"/>
+        </scene>
+        <!--History Table View Controller-->
+        <scene sceneID="bd6-Vg-p6O">
+            <objects>
+                <tableViewController storyboardIdentifier="hisVC" id="qgY-NJ-lI3" customClass="HistoryTableViewController" customModule="e_conomic" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="zmS-P3-0wI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="histCell" textLabel="EXQ-9q-J1h" rowHeight="79" style="IBUITableViewCellStyleDefault" id="3FV-Hc-lfm">
+                                <rect key="frame" x="0.0" y="50" width="393" height="79"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3FV-Hc-lfm" id="p9A-DK-DGI">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="79"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EXQ-9q-J1h">
+                                            <rect key="frame" x="20" y="0.0" width="353" height="79"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="qgY-NJ-lI3" id="QBG-4d-bs2"/>
+                            <outlet property="delegate" destination="qgY-NJ-lI3" id="gxs-2N-IeH"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="clX-gm-m9h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3916.7938931297708" y="-36.619718309859159"/>
         </scene>
     </scenes>
     <resources>
